package Commons

class ConnectionPageTags {

    val connectionScreen = "ConnectionPage"
    val pc300Card = "pc300"
    val omronCard = "Omron"
    val trackyCard = "Tracky"


    val bleScanningScreen = "BleScanPage"

    companion object{
        val shared = ConnectionPageTags()
    }
}