...

    private var isInitialized = false

    // The variable "bluetoothArray" is a 2D array containing device names.Used to check if a device is one of the supported Bluetooth devices.
    private val bluetoothArray = arrayOf(
        arrayOf(
            "PC_300SNT", "PC-200", "QC-200",
            "PC-100"
        )
    )

    // The "bleSocket" variable is a BluetoothSocket object and is used to store the connection to the Bluetooth device.
    var bleSocket : BluetoothSocket? = null
...
