...
                    TableHeaderCell("ECG")
                    TableHeaderCell("QNA")
                    TableHeaderCell("Remarks")
                    TableHeaderCell("Location")
                    when(isGuest){
                        true -> TableHeaderCell("Delete")
                        false -> TableHeaderCell("Share")
                    }
                }
            }
            if(MainActivity.subUserRepo.bufferThere.value){
                sessionsList.add(MainActivity.subUserRepo.getSession())
            }
...
