...

        var isLongPress by remember { mutableStateOf(false) }

        var isSelectedSessionId by remember { mutableStateOf("") }

        AlertView(showAlert = isShowAlert,
            title = "Unsaved Data",
            subTitle = "Do you want to save user session data?",
            subTitle1 = "",
            onYesClick = {
                ifIsExitAndSave = true
                MainActivity.subUserRepo.updateProgressState(true)
                MainActivity.subUserRepo.saveOrUpdateSession()
...
                    modifier = Modifier
                        .fillMaxSize()
                        .background(if (isSelected2A.value) Color(0xFF397EF5) else Color.LightGray),
                    contentAlignment = Alignment.Center,

                    ) {
                    RegularTextView(title = "Yes", fontSize = 14)
                }
            }

            Spacer(modifier = Modifier.width(100.dp))

            Card(
...
