...
        } }, text = {
            RegularTextView(title = "Are you sure you want to SignOut?")
        }, modifier = Modifier.fillMaxWidth(), confirmButton = {
            Button(onClick = {
                onSignOutClick()
            }) {
                BoldTextView(title = "SignOut", textColor = Color.White)
            }
        }, dismissButton = {
            Button(onClick = { onCancelClick() }) {
                BoldTextView(title = "Cancel", textColor = Color.White)
            }
        })
...
